Fix issues
- Fix ShredderList to pass all tests
- Fix CustomDictionary to avoid NPE
- Change LinkedList to List