@@ -2,6 +2,7 @@ package ru.mail.polis.homework.collections.structure;
 
 import java.util.EmptyStackException;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Stack;
 
 /**
@@ -12,20 +13,20 @@ import java.util.Stack;
  */
 public class MaxStack extends Stack<Integer> {
 
-    private final LinkedList<Integer> maxList = new LinkedList<>();
+    private final List<Integer> maxList = new LinkedList<>();
 
     @Override
     public Integer push(Integer item) {
-        if (isEmpty() || item > maxList.getLast()) {
-            maxList.addLast(item);
+        if (isEmpty() || item >= maxList.get(maxList.size() - 1)) {
+            maxList.add(item);
         }
         return super.push(item);
     }
 
     @Override
     public synchronized Integer pop() {
-        if (peek().equals(maxList.getLast())) {
-            maxList.removeLast();
+        if (peek().equals(maxList.get(maxList.size() - 1))) {
+            maxList.remove(maxList.size() - 1);
         }
         return super.pop();
     }
@@ -34,6 +35,6 @@ public class MaxStack extends Stack<Integer> {
         if (isEmpty()) {
             throw new EmptyStackException();
         }
-        return maxList.getLast();
+        return maxList.get(maxList.size() - 1);
     }
 }
